--- a/apps/astro/src/components/global/ProcessAccordion.astro
+++ b/apps/astro/src/components/global/ProcessAccordion.astro
@@ -15,6 +15,7 @@ export const ProcessAccordion_Query = `
 
 export type Props = {
   index: number
+  sectionId?: string
   heading: PortableTextValue
   paragraph: PortableTextValue
   items: {
@@ -23,10 +24,10 @@ export type Props = {
   }[]
 }
 
-const { index, heading, paragraph, items } = Astro.props
+const { index, sectionId, heading, paragraph, items } = Astro.props
 ---
 
-<section class="ProcessAccordion">
+<section class="ProcessAccordion" id={sectionId}>
   <header>
     <PortableText value={heading} heading={index === 0 ? 'h1' : 'h2'} class="heading" />
     <PortableText value={paragraph} />
