add Newsletter section

--- a/apps/astro/src/components/Components.astro
+++ b/apps/astro/src/components/Components.astro
@@ -13,6 +13,7 @@ import GridShowcaseSection, { GridShowcaseSection_Query } from '@/components/glo
 import Faq, { Faq_Query } from '@/components/global/Faq.astro'
 import ProcessAccordion, { ProcessAccordion_Query } from '@/components/global/ProcessAccordion.astro'
 import TestimonialSection, { TestimonialSection_Query } from '@/components/global/TestimonialSection.astro'
+import Newsletter, { Newsletter_Query } from '@/src/components/global/Newsletter/Newsletter.astro'
 
 const components = {
   LandingFeature,
@@ -26,6 +27,7 @@ const components = {
   Faq,
   ProcessAccordion,
   TestimonialSection,
+  Newsletter,
 }
 
 type ComponentsMap = {
@@ -58,6 +60,7 @@ export const Components_Query = /* groq */ `
     _type == "Faq" => ${Faq_Query}
     _type == "ProcessAccordion" => ${ProcessAccordion_Query}
     _type == "TestimonialSection" => ${TestimonialSection_Query}
+    _type == "Newsletter" => ${Newsletter_Query}
   },
 `
 ---
