--- a/apps/astro/src/components/global/Faq.astro
+++ b/apps/astro/src/components/global/Faq.astro
@@ -1,6 +1,6 @@
 ---
 import PortableText, { PortableTextQuery, type PortableTextValue } from '@/components/ui/portable-text'
-import Button, { ButtonDataQuery, type ButtonDataProps } from '@/components/ui/button'
+import Button, { ButtonDataQuery, type ButtonDataProps } from '@/src/components/ui/Button'
 import Accordion from '@/components/ui/Accordion.astro'
 
 export const Faq_Query = `
