--- a/apps/astro/src/components/global/ImagedBenefitsSection.astro
+++ b/apps/astro/src/components/global/ImagedBenefitsSection.astro
@@ -1,6 +1,6 @@
 ---
 import PortableText, { PortableTextQuery, type PortableTextValue } from '@/components/ui/portable-text'
-import Button, { ButtonDataQuery, type ButtonDataProps } from '@/components/ui/button'
+import Button, { ButtonDataQuery, type ButtonDataProps } from '@/src/components/ui/Button'
 import Image, { ImageDataQuery, type ImageDataProps } from '@/components/ui/image'
 
 export const ImagedBenefitsSection_Query = `
