--- a/apps/astro/src/global/global.scss
+++ b/apps/astro/src/global/global.scss
@@ -82,7 +82,7 @@
   --error-500: #d13d2c;
 
   --success-100: #14652c;
-  --success-500: #1da546;
+  --success-500: #045d1f;
 }
 
 svg {
@@ -160,7 +160,7 @@ img {
   outline: none;
 }
 :focus-visible {
-  outline: 2px solid var(--primary-300, #ffe6a2);
+  outline: 2px solid var(--primary-400, #f4cb5b);
   outline-offset: 5px;
 }
 
@@ -170,7 +170,7 @@ body {
 }
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 123px;
+  scroll-padding-top: 34px;
 }
 body {
   overflow: clip;
@@ -245,6 +245,18 @@ h3,
     color: var(--primary-500, #dbb039);
   }
 }
+[light-background] {
+  .link {
+    &[target='_blank'] {
+      &::after {
+        content: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMCIgaGVpZ2h0PSIxMCIgZmlsbD0ibm9uZSI+PHBhdGggZmlsbD0iIzNCM0IzQiIgc3Ryb2tlPSIjM0IzQjNCIiBkPSJNMS43NTYuNzc3aDcuNzN2OGgtLjg5MVYyLjE3TDIuMTIzIDguNjQxbC0uNjMtLjYzIDYuMzQxLTYuMzQySDEuNzU2Vi43NzdaIi8+PC9zdmc+');
+      }
+    }
+    &:hover {
+      color: var(--primary-500);
+    }
+  }
+}
 
 .sec-wo-margin {
   margin: 0 calc(var(--page-margin) * -1);
@@ -286,5 +298,14 @@ h3,
 div.paragraph {
   & > *:not(:last-child) {
     margin-bottom: 8px;
+  }
+}
+
+.Form {
+  position: relative;
+  &:has([data-form-state]) {
+    & > *:not([data-form-state]) {
+      display: none;
+    }
   }
 }
