fix accessibility issues

--- a/apps/astro/src/components/ui/Input/styles.module.scss
+++ b/apps/astro/src/components/ui/Input/styles.module.scss
@@ -1,5 +1,5 @@
 .label {
-  color: var(--neutral-300, #b8b8b8);
+  color: var(--neutral-600, #3B3B3B);
   font-size: calc(12rem / 16);
   line-height: 158%;
   margin-bottom: calc(2rem / 16);
