--- a/apps/astro/src/components/global/Footer.astro
+++ b/apps/astro/src/components/global/Footer.astro
@@ -24,7 +24,7 @@ const data = await sanityFetch<QueryProps>({
   <div class="max-width">
     <p class="copy">
       © 2024{' '}
-      <a href="https://kryptonum.eu/pl">
+      <a href="https://kryptonum.eu/pl" aria-label="Kryptonum">
         <svg xmlns="http://www.w3.org/2000/svg" width="88" height="16" fill="none">
           <title>Kryptonum</title>
           <path
