--- a/apps/astro/src/layouts/Layout.astro
+++ b/apps/astro/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '@/global/global.scss'
 import { LOCALE } from '@/global/constants'
 import Head, { type Props as HeadProps } from './Head.astro'
+import CookieConsent from '@/components/global/CookieConsent.astro'
 import Footer from '@/components/global/Footer.astro'
 import SmoothScroll from './smooth-scroll.astro'
 
@@ -14,6 +15,7 @@ type Props = HeadProps
     <Head {...Astro.props} />
   </head>
   <body>
+    <CookieConsent />
     <main id="main">
       <slot />
     </main>
