--- a/apps/astro/src/components/ui/FormState/styles.module.scss
+++ b/apps/astro/src/components/ui/FormState/styles.module.scss
@@ -5,7 +5,7 @@
     grid-template-columns: auto 1fr;
     font-size: clamp(calc(24rem / 16), calc(28vw / 7.68), calc(28rem / 16));
     svg {
-      margin-top: calc(4rem / 16);
+      margin-top: 0.04em;
     }
   }
   .paragraph {
