add class link to links from PortableText

--- a/apps/astro/src/components/ui/portable-text/Mark.astro
+++ b/apps/astro/src/components/ui/portable-text/Mark.astro
@@ -15,6 +15,7 @@ const { node, ...props } = Astro.props
         target: '_blank',
         rel: 'noreferrer',
       })}
+      class="link"
       {...props}>
       <slot />
     </a>
