--- a/apps/astro/src/components/global/CookieConsent.astro
+++ b/apps/astro/src/components/global/CookieConsent.astro
@@ -2,7 +2,7 @@
 import Switch from '@/components/ui/Switch.astro'
 import Button from '@/components/ui/Button'
 
-const GTAG_ID = 'GTM-MHJNBK6'
+const GTAG_ID = 'GTM-KDTPBM4N'
 
 const groups = [
   {
