add vercel.json rewrite

--- a/apps/astro/src/pages/[slug].astro
+++ b/apps/astro/src/pages/[slug].astro
@@ -45,4 +45,4 @@ const metadata = await metadataFetch('Landing_Collection', slug)
   })
 </script>
 
-<script is:inline src="/test.js"></script>
+<script is:inline src="/test.js" type="text/partytown"></script>
