--- a/apps/astro/src/pages/[slug].astro
+++ b/apps/astro/src/pages/[slug].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true
+
 import Layout from '@/src/layouts/Layout.astro'
 import sanityFetch from '@/utils/sanity.fetch'
 import metadataFetch from '@/utils/metadata.fetch'
