changed fontSize for checkbox

--- a/apps/astro/src/components/ui/Checkbox/styles.module.scss
+++ b/apps/astro/src/components/ui/Checkbox/styles.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   grid-template-columns: auto 1fr;
   gap: calc(2rem / 16);
-  font-size: 1rem;
+  font-size: calc(14rem / 16);
   color: var(--neutral-100, #e6e6e6);
   cursor: pointer;
   &:not(:has(input:checked)):hover {
