fix button styles in forms

--- a/apps/astro/src/components/global/ContactForm/index.astro
+++ b/apps/astro/src/components/global/ContactForm/index.astro
@@ -46,6 +46,9 @@ const { index, sectionId, heading, paragraph } = Astro.props
       :global(.Form) {
         width: 100%;
         margin-left: auto;
+        :global(.cta) {
+          width: fit-content;
+        }
       }
     }
     :global(.Loader) {
