--- a/apps/astro/src/components/global/Newsletter/Newsletter.astro
+++ b/apps/astro/src/components/global/Newsletter/Newsletter.astro
@@ -42,6 +42,9 @@ const { index, sectionId, heading, paragraph, groupId } = Astro.props
         :global(form) {
           margin-left: auto;
         }
+        :global(.cta) {
+          width: fit-content;
+        }
       }
     }
   }
