--- a/apps/astro/src/components/global/ImagedBenefitsSection.astro
+++ b/apps/astro/src/components/global/ImagedBenefitsSection.astro
@@ -89,7 +89,11 @@ const { index, sectionId, isReversed, heading, paragraph, cta, benefits } = Astr
   }
   .list {
     .item {
-      padding: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(48rem / 16)) 0;
+      position: sticky;
+      top: 0;
+      background: var(--neutral-700, #222);
+      margin: 0 calc(var(--page-margin) * -1);
+      padding: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(48rem / 16)) var(--page-margin);
       display: grid;
       gap: clamp(calc(24rem / 16), calc(32vw / 7.68), calc(32rem / 16)) 2rem;
       @media (min-width: calc(1000rem / 16)) {
