--- a/apps/astro/src/components/global/Footer.astro
+++ b/apps/astro/src/components/global/Footer.astro
@@ -23,7 +23,7 @@ const data = await sanityFetch<QueryProps>({
 <footer class="footer" id="footer">
   <div class="max-width">
     <p class="copy">
-      © 2024{' '}
+      © {new Date().getFullYear()}{' '}
       <a href="https://kryptonum.eu/pl" aria-label="Kryptonum">
         <svg xmlns="http://www.w3.org/2000/svg" width="88" height="16" fill="none">
           <title>Kryptonum</title>
