update dependencies and tsconfig

--- a/apps/astro/src/components/Components.astro
+++ b/apps/astro/src/components/Components.astro
@@ -1,20 +1,20 @@
 ---
 import type { ComponentProps } from 'astro/types'
-import LandingFeature, { LandingFeature_Query } from '@/components/global/LandingFeature.astro'
-import FullWidthPhoto, { FullWidthPhoto_Query } from '@/components/global/FullWidthPhoto.astro'
-import BenefitsGrid, { BenefitsGrid_Query } from '@/components/global/BenefitsGrid.astro'
-import ImagedBenefitsSection, { ImagedBenefitsSection_Query } from '@/components/global/ImagedBenefitsSection.astro'
+import LandingFeature, { LandingFeature_Query } from '@components/global/LandingFeature.astro'
+import FullWidthPhoto, { FullWidthPhoto_Query } from '@components/global/FullWidthPhoto.astro'
+import BenefitsGrid, { BenefitsGrid_Query } from '@components/global/BenefitsGrid.astro'
+import ImagedBenefitsSection, { ImagedBenefitsSection_Query } from '@components/global/ImagedBenefitsSection.astro'
 import MetricsHighlightSection, {
   MetricsHighlightSection_Query,
-} from '@/components/global/MetricsHighlightSection.astro'
-import BenefitsWithImage, { BenefitsWithImage_Query } from '@/components/global/BenefitsWithImage.astro'
-import BenefitsNumberedGrid, { BenefitsNumberedGrid_Query } from '@/components/global/BenefitsNumberedGrid.astro'
-import GridShowcaseSection, { GridShowcaseSection_Query } from '@/components/global/GridShowcaseSection.astro'
-import Faq, { Faq_Query } from '@/components/global/Faq.astro'
-import ProcessAccordion, { ProcessAccordion_Query } from '@/components/global/ProcessAccordion.astro'
-import TestimonialSection, { TestimonialSection_Query } from '@/components/global/TestimonialSection.astro'
-import Newsletter, { Newsletter_Query } from '@/src/components/global/Newsletter/Newsletter.astro'
-import ContactForm, { ContactForm_Query } from '@/src/components/global/ContactForm/index.astro'
+} from '@components/global/MetricsHighlightSection.astro'
+import BenefitsWithImage, { BenefitsWithImage_Query } from '@components/global/BenefitsWithImage.astro'
+import BenefitsNumberedGrid, { BenefitsNumberedGrid_Query } from '@components/global/BenefitsNumberedGrid.astro'
+import GridShowcaseSection, { GridShowcaseSection_Query } from '@components/global/GridShowcaseSection.astro'
+import Faq, { Faq_Query } from '@components/global/Faq.astro'
+import ProcessAccordion, { ProcessAccordion_Query } from '@components/global/ProcessAccordion.astro'
+import TestimonialSection, { TestimonialSection_Query } from '@components/global/TestimonialSection.astro'
+import Newsletter, { Newsletter_Query } from '@components/global/Newsletter/Newsletter.astro'
+import ContactForm, { ContactForm_Query } from '@components/global/ContactForm/index.astro'
 
 const components = {
   LandingFeature,
