--- a/apps/astro/src/components/global/FullWidthPhoto.astro
+++ b/apps/astro/src/components/global/FullWidthPhoto.astro
@@ -1,5 +1,5 @@
 ---
-import Image, { ImageDataQuery, type ImageDataProps } from '@/components/ui/image'
+import Image, { ImageDataQuery, type ImageDataProps } from '@components/ui/image'
 
 export const FullWidthPhoto_Query = `
   {
