--- a/apps/astro/src/pages/polityka-prywatnosci.astro
+++ b/apps/astro/src/pages/polityka-prywatnosci.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '@/src/layouts/Layout.astro'
-import sanityFetch from '@/utils/sanity.fetch'
-import metadataFetch from '@/utils/metadata.fetch'
-import PortableText, { PortableTextQuery, type PortableTextValue } from '@/components/ui/portable-text'
+import Layout from '@layouts/Layout.astro'
+import sanityFetch from '@utils/sanity.fetch'
+import metadataFetch from '@utils/metadata.fetch'
+import PortableText, { PortableTextQuery, type PortableTextValue } from '@components/ui/portable-text'
 
 type QueryProps = {
   header: {
