--- a/apps/astro/src/components/global/BenefitsWithImage.astro
+++ b/apps/astro/src/components/global/BenefitsWithImage.astro
@@ -1,7 +1,7 @@
 ---
-import PortableText, { PortableTextQuery, type PortableTextValue } from '@/components/ui/portable-text'
-import Button, { ButtonDataQuery, type ButtonDataProps } from '@/src/components/ui/Button'
-import Image, { ImageDataQuery, type ImageDataProps } from '@/components/ui/image'
+import PortableText, { PortableTextQuery, type PortableTextValue } from '@components/ui/portable-text'
+import Button, { ButtonDataQuery, type ButtonDataProps } from '@components/ui/Button'
+import Image, { ImageDataQuery, type ImageDataProps } from '@components/ui/image'
 
 export const BenefitsWithImage_Query = `
   {
