--- a/apps/astro/src/layouts/Layout.astro
+++ b/apps/astro/src/layouts/Layout.astro
@@ -1,18 +1,20 @@
 ---
-import '@/global/global.scss'
-import { LOCALE } from '@/global/constants'
+import '@global/global.scss'
+import { LOCALE } from '@global/constants'
 import Head, { type Props as HeadProps } from './Head.astro'
-import CookieConsent from '@/components/global/CookieConsent.astro'
-import Footer from '@/components/global/Footer.astro'
-import SmoothScroll from './smooth-scroll.astro'
+import CookieConsent from '@components/global/CookieConsent.astro'
+import Footer from '@components/global/Footer.astro'
+import SmoothScroll from '@layouts/smooth-scroll.astro'
 
 type Props = HeadProps
+
+const { ...props } = Astro.props
 ---
 
 <!doctype html>
 <html lang={LOCALE}>
   <head>
-    <Head {...Astro.props} />
+    <Head {...props} />
   </head>
   <body>
     <CookieConsent />
