--- a/apps/astro/src/pages/404.astro
+++ b/apps/astro/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '@/src/layouts/Layout.astro'
-import sanityFetch from '@/utils/sanity.fetch'
-import metadataFetch from '@/utils/metadata.fetch'
-import Components, { Components_Query, type ComponentsProps } from '@/components/Components.astro'
+import Layout from '@layouts/Layout.astro'
+import sanityFetch from '@utils/sanity.fetch'
+import metadataFetch from '@utils/metadata.fetch'
+import Components, { Components_Query, type ComponentsProps } from '@components/Components.astro'
 
 type QueryProps = {
   components: ComponentsProps
